<resources>
    <string name="app_name">AutomobileCheckpoint4</string>
    <string name="title_activity_maps">Map</string>
    <string name="h1">AUTOMOBILE CHECKPOINT</string>
    <string name="h2">IN </string>
    <string name="h3">RATCHABURI</string>
    <string name="c1">ค้นหาอำเภอ</string>
    <string name="c2">อู่ซ่อมรถยนต์ทั้งหมด</string>
    <string name="c3">ค้นหาตำบล</string>
    <string name="c4">ค้นหาอู่ซ่อมรถยนต์</string>
    <string name="bb1">เมือง</string>
    <string name="bb2">ดำเนินสะดวก</string>
    <string name="bb3">โพธาราม</string>
    <string name="bb4">บ้านโป่ง</string>
    <string name="bb5">จอมบึง</string>
    <string name="bb6">สวนผึ้ง</string>
    <string name="bb7">ปากท่อ</string>
    <string name="bb8">บางแพ</string>
    <string name="bb9">วัดเพลง</string>
    <string name="bb10">กิ่งอำเภอบ้านคา</string>
    <string name="b1">ค้นหาอู่ซ่อมรถยนต์</string>
    <string name="b3">เกี่ยวกับเรา</string>
    <string name="b4">หน้าเมือง</string>
    <string name="b5">เจดีย์หัก</string>
    <string name="b6">ดอนตะโก</string>
    <string name="b7">พงสวาย</string>
    <string name="b8">ห้วยไผ่</string>
    <string name="b9">คุ้งน้ำวน</string>
    <string name="b10">คุ้งกระถิน</string>
    <string name="b11">อ่างทอง</string>
    <string name="b12">โคกหม้อ</string>
    <string name="b13">สามเรือน</string>
    <string name="b14">พิกุลทอง</string>
    <string name="b15">ท่าราบ</string>
    <string name="b16">หินกอง</string>
    <string name="b17">หลุมดิน</string>
    <string name="b18">บางป่า</string>
    <string name="b19">พงสวาย</string>
    <string name="b20">คูบัว</string>
    <string name="b21">บ้านไร่</string>
    <string name="b22">ถัดไป</string>
    <string name="b23">ดำเนินสะดวก</string>
    <string name="b24">ประสาทสิทธิ์</string>
    <string name="b25">ศรีสุราษฎร์</string>
    <string name="b26">ตาหลวง</string>
    <string name="b27">ดอนคลัง</string>
    <string name="b28">บัวงาม</string>
    <string name="b29">บ้านไร่</string>
    <string name="b30">แพงพวย</string>
    <string name="b31">สี่หมื่น</string>
    <string name="b32">ท่านัด</string>
    <string name="b33">ขุนพิทักษ์</string>
    <string name="b34">ดอนไผ่</string>
    <string name="b35">โพธาราม</string>
    <string name="b36">ดอนกระเบื้อง</string>
    <string name="b37">หนองโพ</string>
    <string name="b38">บ้านเลือก</string>
    <string name="b39">คลองตาคต</string>
    <string name="b40">บ้านฆ้อง</string>
    <string name="b41">บ้านสิงห์</string>
    <string name="b42">ดอนทราย</string>
    <string name="b43">เจ็ดเสมียน</string>
    <string name="b44">คลองข่อย</string>
    <string name="b45">ชำแระ</string>
    <string name="b46">สร้อยฟ้า</string>
    <string name="b47">ท่าชุมพล</string>
    <string name="b48">บางโตนด</string>
    <string name="b49">เตาปูน</string>
    <string name="b50">นางแก้ว</string>
    <string name="b51">ธรรมเสน</string>
    <string name="b52">เขาชะงุ้ม</string>
    <string name="b53">บ้านโป่ง</string>
    <string name="b54">ท่าผา</string>
    <string name="b55">กรับใหญ่</string>
    <string name="b56">ปากแรต</string>
    <string name="b57">หนองกบ</string>
    <string name="b58">หนองอ้อ</string>
    <string name="b59">ดอนกระเบื้อง</string>
    <string name="b60">สวนกล้วย</string>
    <string name="b61">นครชุมน์</string>
    <string name="b62">บ้านม่วง</string>
    <string name="b63">คุ้งพยอม</string>
    <string name="b64">หนองปลาหมอ</string>
    <string name="b65">เขาขลุง</string>
    <string name="b66">เบิกไพร</string>
    <string name="b67">ลาดบัวขาว</string>
    <string name="b68">จอมบึง</string>
    <string name="b69">ปากช่อง</string>
    <string name="b70">เบิกไพร</string>
    <string name="b71">ด่านทับตะโก</string>
    <string name="b72">แก้มอ้น</string>
    <string name="b73">รางบัว</string>
    <string name="b74">สวนผึ้ง</string>
    <string name="b75">ป่าหวาย</string>
    <string name="b76">ท่าเคย</string>
    <string name="b77">ตะนาวศรี</string>
    <string name="b78">ทุ่งหลวง</string>
    <string name="b79">วังมะนาว</string>
    <string name="b80">ดอนทราย</string>
    <string name="b81">หนองกระทุ่ม</string>
    <string name="b82">ปากท่อ</string>
    <string name="b83">ป่าไก่</string>
    <string name="b84">วัดยางงาม</string>
    <string name="b85">อ่างหิน</string>
    <string name="b86">บ่อกระดาน</string>
    <string name="b87">ยางหัก</string>
    <string name="b88">วันดาว</string>
    <string name="b89">ห้วยยางโทน</string>
    <string name="b90">บางแพ</string>
    <string name="b92">วังเย็น</string>
    <string name="b93">หัวโพ</string>
    <string name="b94">วัดแก้ว</string>
    <string name="b95">ดอนใหญ่</string>
    <string name="b96">ดอนคา</string>
    <string name="b97">โพหัก</string>
    <string name="b98">เกาะศาลพระ</string>
    <string name="b99">จอมประทัด</string>
    <string name="b100">วัดเพลง</string>
    <string name="b101">บ้านคา</string>
    <string name="b102">บ้านบึง</string>
    <string name="b103">หนองพันจันทร์</string>
    <string name="b104">ดอนกรวย</string>
    <string name="b105">อู่ราชบุรี ช่างยนต์\n032-324750</string>
    <string name="b106">อู่ศรีทอง ท่อไอเสีย\n032-319430 </string>
    <string name="b107">ยางดีศูนย์ล้อดี\n081-5733877 </string>
    <string name="b108">อู่วิสุทธิเจริญ การช่าง \n085-1810798</string>
    <string name="b109">อู่ชัยเนตรคาร์แคร์ \n083-3115533</string>
    <string name="b110">อู่เอส.ดี ออโต้แคร์\n089-0075009</string>
    <string name="b111">อู่ท่าเสา \n032-312258</string>
    <string name="b112">อู่ไทร์พลัส\n081-5525350</string>
    <string name="b113">อู่ใหญ่ไพศาล \n032-325345</string>
    <string name="b114">อู่สมเกียรติ ประดับยนต์\n089-2419054</string>
    <string name="b115">อู่แบงค์ คาร์เซอร์วิส\n081-5555777</string>
    <string name="b116">อู่พรทีวีเจริญยนต์\n083-2315063</string>
    <string name="b117">อู่สมพงศ์ช่างยนต์\n032-312995</string>
    <string name="b118">อู่ราชบุรีการาจ EMCS\n032-325015</string>
    <string name="b119">อู่ศรีพิชัยบริการ \n032-338810</string>
    <string name="b120">บจก.จินดาการยาง\n032-332444-9 </string>
    <string name="b121">อู่บวรพัฒน์ยางยนต์\n083-3134488</string>
    <string name="b122">อู่สุนทรดีเซล\n081-7638503</string>
    <string name="b123">อู่ชมศักดิ์ช่างยนต์ \n01-6289656</string>
    <string name="b124">อู่สุชาญยนต์ \n032-323341</string>
    <string name="b125">ทีพี ออโต้เซอร์วิส\n088-2388072</string>
    <string name="b126">อู่ศักดิ์เฮดเดอร์เทอร์โบ \n089-9926471</string>
    <string name="b127">อู่ธีรยุทธการช่าง \n032-008361</string>
    <string name="b128">อู่บุญยงค์พาณิชย์\n032-337419</string>
    <string name="b129">อู่ห้วยไผ่ยางยนต์ \n089-4119475</string>
    <string name="b130">อู่บัญชา ออโต้เซอร์วิส\n083-6183372</string>
    <string name="b131">อู่พุทธรักษาดีเซล\n032-337440 </string>
    <string name="b132">อู่เพชรเกษม ออโต้เวย์ส\n032-338578</string>
    <string name="b133">อู่เสา 5 คาร์แคร์ \n083-1554657</string>
    <string name="b134">อู่ช่างชัยบริการ \n0813784461</string>
    <string name="b135">อู่โอภาสดีเซล \n080-05307731</string>
    <string name="b136">อู่PTเซอร์วิส \n085-5616213</string>
    <string name="b137">อู่ธนะโรจน์การช่าง\n087-1582261</string>
    <string name="b138">อู่ธนัทแอร์รถยนต์ \n090-6155115</string>
    <string name="b139">อู่ช่างต๋อง \n081-7415909</string>
    <string name="b140">อู่ริมธีระกุล การช่าง</string>
    <string name="b141">อู่ไพศาล อินเตอร์ เซอร์วิส\n085-2635511</string>
    <string name="b142">อู่ประทีปการช่าง</string>
    <string name="b143">อู่ช่างเบี้ยวการช่าง \n087-1659096</string>
    <string name="b144">ตั้งศูนย์ถ่วงล้อ</string>
    <string name="b145">อู่ป.สุวรรณ์ เซอร์วิส \n089-6128725</string>
    <string name="b146">อู่บ้านใหญ่ช่างยนต์</string>
    <string name="b147">อู่ชัยยุทธ\n032-321260</string>
    <string name="b148">อู่ต.เจริญยนต์  \n032-321930</string>
    <string name="b149">อู่ช่างแก้ว \n088-8603485</string>
    <string name="b150">อู่สินชัย\n032-737026</string>
    <string name="b151">อู่จริงการช่าง\n032-317182</string>
    <string name="b152">อู่ยอดการยาง \n086-0693193</string>
    <string name="b153">อู่พิชิตยนต์\n032-316415</string>
    <string name="b154">อู่ส.ช่างยนต์</string>
    <string name="b155">อู่ชัยเจริญเฮดเดอร์</string>
    <string name="b156">อู่ช่างเสริมเซอร์วิส \n089-7948417</string>
    <string name="b157">อู่ธนกรการยาง</string>
    <string name="b158">อู่วิริยะยนต์</string>
    <string name="b159">อู่บางลานทอง </string>
    <string name="b160">อู่วินัยซุปเปอร์</string>
    <string name="b161">อู่คีติการช่าง</string>
    <string name="b162">อู่สมศักดิ์</string>
    <string name="b165">อู่วงศกรเซอร์วิส \n081-4333139 </string>
    <string name="b166">อู่วัฒนายนต์\n032-254906</string>
    <string name="b167">อู่โชติการช่าง \n081-5593521</string>
    <string name="b168">อู่บุญเลิศการาจ\n081-682-5240</string>
    <string name="b169">อู่ดี.ที.คาร์แคร์</string>
    <string name="b170">อู่รัตนากร เทอร์โบ \n084-5455894</string>
    <string name="b171">อู่สุรินทร์การช่าง\n089-6908495</string>
    <string name="b188">อู่ส.สมบัติการช่าง</string>
    <string name="b189">อู่เป๊ยกการช่าง</string>
    <string name="b190">อู่วุฒิชัย</string>
    <string name="b191">อู่เอสออโต้เซอร์วิส \n032-241 424</string>
    <string name="b172">อู่Big Shop \n032-346603-4</string>
    <string name="b173">อู่ทวีการยาง</string>
    <string name="b174">อู่ชัยยนต์กิจ \n032-353566</string>
    <string name="b175">อู่ ส.สมบัติ</string>
    <string name="b176">อู่สืบศักดิ์เบสไทร์ \n032-346678</string>
    <string name="b177">อู่หนุ่มการช่าง</string>
    <string name="b163">อู่น้ำหนึ่ง</string>
    <string name="b178">อู่x.services \n081-9440227</string>
    <string name="b179">อู่ช่างหนึ่ง \n089-5888300</string>
    <string name="b180">ยิ่งเจริญคาแคร์</string>
    <string name="b184">อู่วิวรรณน์\nเจริญยนต์</string>
    <string name="b181">อู่นพดลยนต์</string>
    <string name="b182">อู่สมเกียรติเซอร์วิส</string>
    <string name="b183">อู่ช่างโน๊ต \n089-2302918</string>
    <string name="b185">อู่ปรีชาการช่าง</string>
    <string name="b186">อู่ดำเนินคาร์แคร์</string>
    <string name="b187">อู่ช่างเอ็กซ์ \n086-5459455</string>
    <string name="b192">อู่เอกเซอร์วิส \n081-8803722</string>
    <string name="b193">อู่พันเซอร์วิส</string>
    <string name="b194">อู่เอส.ที โพธาราม</string>
    <string name="b195">วัดไทร คาร์แคร์ \n032-232046</string>
    <string name="b196">อู่วายริ่ง \n032-354749</string>
    <string name="b197">อู่น้ำเพชร ศูนย์ล้อ \n086-6665650</string>
    <string name="b198">อู่ช่างรินทร์ \n085-1900156</string>
    <string name="b199">อู่ช่างชัยยนต์ \n081-0119574</string>
    <string name="b200">อู่พรชัยเซอร์วิส \n089-9182174</string>
    <string name="b201">อู่สุวรรณ์</string>
    <string name="b202">อู่ทวีชัยการช่าง \n032-35386</string>
    <string name="b203">อู่แสตมป์การยาง \n085- 5319255</string>
    <string name="b204">อู่คมสันการช่าง</string>
    <string name="b205">อู่หนองโพยางยนต์</string>
    <string name="b206">อู่ช่างโอ๊ต</string>
    <string name="b207">อู่เทพประสิทธิ์</string>
    <string name="b208">อู่ทวีชัย</string>
    <string name="b209">อู่ ส.นภาออโต้แอร์ \n03-233015</string>
    <string name="b210">ยางโพธาราม</string>
    <string name="b211">อู่ธ.ธนวัติการยาง</string>
    <string name="b212">อู่ช่างติ๊ก \n081-9428471</string>
    <string name="b213">อู่โชคชูเลิศการช่าง\n086-700 4971</string>
    <string name="b214">ก๋อการยาง \n081-8807385</string>
    <string name="b215">อู่ประสิทธิ์การช่าง \n032-231 359</string>
    <string name="b216">อู่พี.ที \n087-0435620</string>
    <string name="b217">อู่โกวิทย์กลการ</string>
    <string name="b218">ไหล่ย้งบริการ \n032-4256546</string>
    <string name="b219">อู่San Shop \n082-2449055</string>
    <string name="b220">อู่ช่างตุ๋ย</string>
    <string name="b221">อู่แป้งเซอร์วิส</string>
    <string name="b222">อู่โชคบุญมี \n086-4792475</string>
    <string name="b223">อู่เจริญกิจมอเตอร์\n084-3311586</string>
    <string name="b224">อู่ตังกวยการยาง \n081-5715984</string>
</resources>