<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="apprtc.thekop.automobilecheckpoint4.MyActivity9t"
    android:background="@drawable/road3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c3"
        android:id="@+id/textView11"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/h1"
        android:textStyle="bold"
        android:textColor="@color/c1" />

    <Button
        android:layout_width="@dimen/button2"
        android:layout_height="@dimen/button3"
        android:text="@string/b78"
        android:id="@+id/button82"
        android:textStyle="bold"
        android:layout_below="@+id/textView11"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="@dimen/button2"
        android:layout_height="@dimen/button3"
        android:text="@string/b79"
        android:id="@+id/button83"
        android:textStyle="bold"
        android:layout_alignTop="@+id/button82"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="@dimen/button2"
        android:layout_height="@dimen/button3"
        android:text="@string/b80"
        android:id="@+id/button84"
        android:textStyle="bold"
        android:layout_below="@+id/button82"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <Button
        android:layout_width="@dimen/button2"
        android:layout_height="@dimen/button3"
        android:text="@string/b81"
        android:id="@+id/button85"
        android:textStyle="bold"
        android:layout_alignTop="@+id/button84"
        android:layout_alignLeft="@+id/button83"
        android:layout_alignStart="@+id/button83" />

    <Button
        android:layout_width="@dimen/button2"
        android:layout_height="@dimen/button3"
        android:text="@string/b82"
        android:id="@+id/button86"
        android:textStyle="bold"
        android:layout_below="@+id/button84"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <Button
        android:layout_width="@dimen/button2"
        android:layout_height="@dimen/button3"
        android:text="@string/b83"
        android:id="@+id/button87"
        android:textStyle="bold"
        android:layout_alignTop="@+id/button86"
        android:layout_alignLeft="@+id/button89"
        android:layout_alignStart="@+id/button89" />

    <Button
        android:layout_width="@dimen/button2"
        android:layout_height="@dimen/button3"
        android:text="@string/b84"
        android:id="@+id/button88"
        android:textStyle="bold"
        android:layout_below="@+id/button86"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <Button
        android:layout_width="@dimen/button2"
        android:layout_height="@dimen/button3"
        android:text="@string/b85"
        android:id="@+id/button89"
        android:textStyle="bold"
        android:layout_alignTop="@+id/button88"
        android:layout_alignLeft="@+id/button85"
        android:layout_alignStart="@+id/button85" />

    <Button
        android:layout_width="@dimen/button2"
        android:layout_height="@dimen/button3"
        android:text="@string/b86"
        android:id="@+id/button90"
        android:textStyle="bold"
        android:layout_below="@+id/button88"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp" />

    <Button
        android:layout_width="@dimen/button2"
        android:layout_height="@dimen/button3"
        android:text="@string/b87"
        android:id="@+id/button91"
        android:textStyle="bold"
        android:layout_alignTop="@+id/button90"
        android:layout_alignLeft="@+id/button89"
        android:layout_alignStart="@+id/button89" />

    <Button
        android:layout_width="@dimen/button2"
        android:layout_height="@dimen/button3"
        android:text="@string/b88"
        android:id="@+id/button92"
        android:textStyle="bold"
        android:layout_below="@+id/button90"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <Button
        android:layout_width="@dimen/button2"
        android:layout_height="@dimen/button3"
        android:text="@string/b89"
        android:id="@+id/button93"
        android:textStyle="bold"
        android:layout_alignTop="@+id/button92"
        android:layout_alignLeft="@+id/button91"
        android:layout_alignStart="@+id/button91" />

</RelativeLayout>
