<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="apprtc.thekop.automobilecheckpoint4.MyActivity10t"
    android:background="@drawable/road3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c3"
        android:id="@+id/textView12"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/h1"
        android:textStyle="bold"
        android:textColor="@color/c1" />

    <Button
        android:layout_width="@dimen/button2"
        android:layout_height="@dimen/button3"
        android:text="@string/b90"
        android:id="@+id/button95"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textView12"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="@dimen/button2"
        android:layout_height="@dimen/button3"
        android:text="@string/b92"
        android:id="@+id/button96"
        android:textStyle="bold"
        android:layout_below="@+id/button95"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="@dimen/button2"
        android:layout_height="@dimen/button3"
        android:text="@string/b93"
        android:id="@+id/button97"
        android:textStyle="bold"
        android:layout_below="@+id/button96"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="@dimen/button2"
        android:layout_height="@dimen/button3"
        android:text="@string/b94"
        android:id="@+id/button98"
        android:textStyle="bold"
        android:layout_below="@+id/button97"
        android:layout_alignLeft="@+id/button97"
        android:layout_alignStart="@+id/button97"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="@dimen/button2"
        android:layout_height="@dimen/button3"
        android:text="@string/b95"
        android:id="@+id/button99"
        android:textStyle="bold"
        android:layout_below="@+id/button98"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="@dimen/button2"
        android:layout_height="@dimen/button3"
        android:text="@string/b96"
        android:id="@+id/button100"
        android:textStyle="bold"
        android:layout_below="@+id/button99"
        android:layout_alignLeft="@+id/button99"
        android:layout_alignStart="@+id/button99"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="@dimen/button2"
        android:layout_height="@dimen/button3"
        android:text="@string/b97"
        android:id="@+id/button101"
        android:textStyle="bold"
        android:layout_below="@+id/button100"
        android:layout_alignLeft="@+id/button100"
        android:layout_alignStart="@+id/button100"
        android:layout_marginTop="15dp" />

</RelativeLayout>
